[package]
name = "fk_cli"
version = "0.1.1"
authors = ["Dmitry Shvetsov"]
description = "CLI utility for killing running processes with the fuzzy finder and convenience."
license = "MIT"
edition = "2021"

[[bin]]
name = "fk"
path = "src/main.rs"

[lib]
name = "fk_lib"
path = "src/lib.rs"

[dependencies]
console = "0.15.5"
dialoguer = { version = "0.10.3", features = ["fuzzy-select"] }
